tests/neg/i16728.check
-- [E092] Pattern Match Error: tests/neg/i16728.scala:18:11 ------------------------------------------------------------
18 |      case tx : C[Int]#X => // error
   |           ^
   |     the type test for C[Int] cannot be checked at runtime because its type arguments can't be determined from A
   |
   | longer explanation available when compiling with `-explain`
